# UrlShortener

./: README.md
url-shortener/: .gitignore  README.md  docker-compose.yml
url-shortener/backend/: Dockerfile.backend  README.md  db.sqlite3  manage.py  pyproject.toml
url-shortener/backend/shortener/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
url-shortener/backend/shortener/migrations/: 0001_initial.py
url-shortener/backend/url_shortener/: settings.py  urls.py  wsgi.py
url-shortener/frontend/: Dockerfile.frontend
url-shortener/frontend/src/: App.css  App.js
